--- a/objectledge-demo-minimal/src/main/webapp/WEB-INF/web.xml
+++ b/objectledge-demo-minimal/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+  <display-name>Objectledge minimal demo</display-name>
   <servlet>
     <servlet-name>ledge</servlet-name>
     <servlet-class>org.objectledge.web.LedgeServlet</servlet-class>
