--- a/objectledge-demo-minimal/src/main/webapp/WEB-INF/web.xml
+++ b/objectledge-demo-minimal/src/main/webapp/WEB-INF/web.xml
@@ -1,18 +1,28 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
+<!DOCTYPE web-app
+    PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.2//EN"
+    "http://java.sun.com/j2ee/dtds/web-app_2.5.dtd">
 <web-app>
   <display-name>Objectledge minimal demo</display-name>
+  <listener>
+    <listener-class>org.objectledge.web.LedgeServletContextListener</listener-class>
+  </listener>
+  <context-param>
+    <param-name>root</param-name>
+    <param-value>workdir</param-value>
+  </context-param>
   <servlet>
     <servlet-name>ledge</servlet-name>
     <servlet-class>org.objectledge.web.LedgeServlet</servlet-class>
+    <init-param>
+      <param-name>dispatcher</param-name>
+      <param-value>main</param-value>
+    </init-param>
   </servlet>
   <servlet-mapping>
     <servlet-name>ledge</servlet-name>
     <url-pattern>/ledge/*</url-pattern>
   </servlet-mapping>
-  
+
   <session-config>
     <session-timeout>30</session-timeout>
   </session-config>
