Add rest module

--- a/objectledge-demo-parent/pom.xml
+++ b/objectledge-demo-parent/pom.xml
@@ -12,6 +12,7 @@
 
   <modules>
     <module>../objectledge-demo-minimal</module>
+    <module>../objectledge-demo-rest</module>
   </modules>
 
   <properties>
