Restore minimal example to be really minimal

--- a/objectledge-demo-parent/pom.xml
+++ b/objectledge-demo-parent/pom.xml
@@ -13,6 +13,7 @@
   <modules>
     <module>../objectledge-demo-minimal</module>
     <module>../objectledge-demo-rest</module>
+    <module>../objectledge-demo-security</module>
   </modules>
 
   <properties>
