--- a/objectledge-demo-security/pom.xml
+++ b/objectledge-demo-security/pom.xml
@@ -31,6 +31,21 @@
             <version>2.0-m12</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-core</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-web</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-aspectj</artifactId>
+            <version>1.2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
