--- a/objectledge-demo-security/pom.xml
+++ b/objectledge-demo-security/pom.xml
@@ -13,6 +13,10 @@
     <packaging>war</packaging>
     <name>ObjectLedge security demo project</name>
 
+    <properties>
+        <versions.shiro>1.2.1</versions.shiro>
+    </properties>
+
 
     <dependencies>
         <dependency>
@@ -34,17 +38,17 @@
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-core</artifactId>
-            <version>1.2.1</version>
+            <version>${versions.shiro}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-web</artifactId>
-            <version>1.2.1</version>
+            <version>${versions.shiro}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-aspectj</artifactId>
-            <version>1.2.1</version>
+            <version>${versions.shiro}</version>
         </dependency>
     </dependencies>
 
