--- a/objectledge-demo-security/src/main/webapp/WEB-INF/web.xml
+++ b/objectledge-demo-security/src/main/webapp/WEB-INF/web.xml
@@ -2,10 +2,30 @@
         PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.2//EN"
         "http://java.sun.com/j2ee/dtds/web-app_2.5.dtd">
 <web-app>
-    <display-name>Objectledge minimal demo</display-name>
+    <display-name>Objectledge security demo</display-name>
+
     <listener>
         <listener-class>org.objectledge.web.LedgeServletContextListener</listener-class>
     </listener>
+
+    <listener>
+        <listener-class>org.apache.shiro.web.env.EnvironmentLoaderListener</listener-class>
+    </listener>
+
+    <filter>
+        <filter-name>ShiroFilter</filter-name>
+        <filter-class>org.apache.shiro.web.servlet.ShiroFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>ShiroFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+        <dispatcher>INCLUDE</dispatcher>
+        <dispatcher>ERROR</dispatcher>
+    </filter-mapping>
+
     <context-param>
         <param-name>root</param-name>
         <param-value>workdir</param-value>
