Add configuration for custom location of apache shiro config

--- a/objectledge-demo-security/src/main/webapp/WEB-INF/web.xml
+++ b/objectledge-demo-security/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,11 @@
 <web-app>
     <display-name>Objectledge security demo</display-name>
 
+    <context-param>
+        <param-name>shiroConfigLocations</param-name>
+        <param-value>/config/shiro.ini</param-value>
+    </context-param>
+
     <listener>
         <listener-class>org.objectledge.web.LedgeServletContextListener</listener-class>
     </listener>
